# live_vocoder

./: .gitattributes  .gitignore  audio_backend.py  browser_vocode_stream.py  carrier_library.py  diagnose_routing.py  list_sounddevices.sh  live_vocoder.py  live_vocoder_gtk.py  live_vocoder_gui.py  live_vocoder_web.py  pulse_portaudio.py  pulse_virtmic.py  pyproject.toml  requirements.txt  run-mac.command  run-win10-qemu-test.sh  run-windows-exe-qemu-gtk.sh  run-wine.sh  run.bat  run.sh  run_portable.py  test_audio_routing.py  test_monitor_logic.py  test_virtual_mic_capture.sh  virt_mic_unified.py  vocoder_session.py
.github/workflows/: build-android-apk.yml  build-cpp-windows-exe.yml  build-windows-exe.yml
LiveVocoder/: .gitignore  CMakeLists.txt  README.txt  build-cross-windows.sh  build-installer-minimal.bat  build-installer-minimal.sh  bundle-installer-minimal.bat  bundle-installer-minimal.sh  sync-to-cpp.sh
LiveVocoder/installer/: LiveVocoderCppMinimal.iss  README-INSTALLER.txt  sh-LiveVocoder-Setup.sh
LiveVocoder/src/: carrier_convert.cpp  carrier_convert.hpp  linux_pulse_env.cpp  linux_pulse_env.hpp  pa_duplex.cpp  pa_duplex.hpp  sdl_gui.cpp
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/livevocoder/app/: AboutActivity.kt  GithubApkUpdate.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_about.xml  activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cpp/: CMakeLists.txt  README.txt  build-cross-windows.sh  build-installer-minimal.bat  build-installer-minimal.sh  build-installer.sh  bundle-dist-windows-cross-python.sh  bundle-installer-minimal.bat  bundle-installer-minimal.sh  bundle-mingw.sh  fetch-windows-ffmpeg.sh  install_python_deps.sh  run-win10-qemu-test.sh  run-windows-exe-qemu-gtk.sh  run-wine-cross-exe.sh  run_gtk_gui.bat  run_web_gui.bat  run_web_gui.sh
cpp/installer/: CarriersFolderReadme.txt  Launch-LiveVocoder.bat  LiveVocoder.iss  LiveVocoderCppMinimal.iss  README-LINUX.txt  README_Cpp_Minimal.txt  README_Wine_Installer.txt  Run-from-QEMU-share.bat  SmokeValidateF32.bat  Test-CarrierF32-VM-UntilOk.bat  sh-LiveVocoder-Setup.sh
cpp/src/: app_version.hpp  carrier_convert.cpp  carrier_convert.hpp  default_entry.cpp  gui_audio_engine.cpp  gui_audio_engine.hpp  linux_pulse_env.cpp  linux_pulse_env.hpp  main.cpp  pa_duplex.cpp  pa_duplex.hpp  pa_win32_monitor_out.cpp  qt_gui.cpp  qt_main.cpp  sdl_gui.cpp  update_check_win.cpp  update_check_win.hpp  win_default_virt_mic.cpp  win_default_virt_mic.hpp
packaging/: build-all-windows-exe.bat  build-deb.sh  build-exe.bat  build-exe.ps1  build-launcher-exe.bat  qemu-win10-test.sh  win_exe_entry.py
scripts/: check-wine-livevocoder-host.sh  debug-vm-livevocoder.sh  live-vocoder-wine-launch.sh  run-windows-exe-qemu-gtk.sh  test-installer-qemu-win10.sh  test-installer-qemu.sh  wine-run-livevocoder-setup.sh
src/: README.txt  run-win10-qemu-test.sh
src/cpp/: CMakeLists.txt  Makefile  README.txt  build-installer-minimal.bat  build-installer-minimal.sh  build-installer.bat  build-mingw.bat  bundle-cross-dlls.sh  bundle-installer-minimal.bat  bundle-installer-minimal.sh  bundle-mingw.sh  clean-cross-artifacts.sh  run-win10-qemu-test.sh  run-wine-cross-exe.sh  run_gtk_gui.sh
src/cpp/cmake/: mingw-w64-cross.cmake
src/cpp/installer/: CarriersFolderReadme.txt  LiveVocoder.iss  LiveVocoderCppMinimal.iss  README-LINUX.txt  README_Cpp_Minimal.txt  README_Wine_Installer.txt  README_Wine_macOS.txt  Run-from-QEMU-share.bat  Test-CarrierF32-VM-Once.bat  gen_livevocoder_ico.py  gen_smoke_carrier_f32.py  live_vocoder.rc  sh-LiveVocoder-Setup.sh
src/cpp/src/: README_Cpp_Minimal.txt  bands.hpp  carrier_convert.cpp  gui_audio_engine.cpp  gui_audio_engine.hpp  linux_pulse_env.cpp  linux_pulse_env.hpp  main.cpp  pa_duplex.cpp  pa_duplex.hpp  pa_win32_monitor_out.cpp  pa_win32_monitor_out.hpp  qt_gui.cpp  qt_gui.hpp  sdl_gui.cpp  sdl_gui.hpp  sdl_win32_entry.cpp  update_check_win.cpp  vocoder.cpp  vocoder.hpp  win_default_virt_mic.cpp  win_default_virt_mic.hpp
src/scripts/: debug-vm-livevocoder.sh  fix_audio.sh  live-vocoder-wine-launch.sh  test-installer-qemu-win10.sh  test-installer-qemu.sh  test_virt_mic_null_sink_rate.sh  vm-carrier-f32-until-ok-wine.sh  vm-wine-validate-f32-loop.sh
