[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-vocoder"
version = "0.2.0"
description = "Live microphone spectral vocoder (GTK / web / CLI); PipeWire virtual mic on Linux, virtual cable on Windows/macOS"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Live Vocoder contributors" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4.6",
    "gradio>=4.44.0",
]

[project.scripts]
live-vocoder = "live_vocoder:main"

[tool.setuptools]
py-modules = [
    "audio_backend",
    "browser_vocode_stream",
    "carrier_library",
    "diagnose_routing",
    "live_vocoder",
    "live_vocoder_gtk",
    "live_vocoder_gui",
    "live_vocoder_web",
    "pulse_portaudio",
    "pulse_virtmic",
    "virt_mic_unified",
    "vocoder_session",
]
